@@ -545,6 +545,7 @@ docremark [This does not work in multiplayer. For entertainment purposes only :)
 docident [gametimecurrent] [Returns the time (in milliseconds) of the currently played game. READ ONLY];
 docexample [showtime = [ if (> $lastgametimeupdate 0) [ gmr = (- $gametimemaximum (+ $gametimecurrent (- (millis) $lastgametimeupdate))) gsr = (div $gmr 1000) gts = (mod $gsr 60) if (< $gts 10) [ gts = (concatword 0 $gts) ] [ ] gtm = (div $gsr 60) if (< $gtm 10) [ gtm = (concatword 0 $gtm) ] [ ] echo (concatword $gtm : $gts) remaining ] [ echo gametime not updated yet ] ]] [];
 docident [gametimemaximum] [Returns the maximum time (in milliseconds) of the currently played game. READ ONLY];
+docident [gametimestart] [Returns the time "(in milliseconds)" when the last map was loaded.];
 docident [getclientmode] [Returns the current game mode number.];
 docident [getdemo] [];
 docargument [X] [number in list] [] [0];
@@ -918,6 +919,8 @@ docident [savemap] [Saves the current map.];
 docargument [M] [file name of the map, see command 'map' for the naming scheme] [string] [0];
 docremark [savemap makes a versioned backup (mapname_N.BAK) if a map by that name already exists. If the name argument is omitted, it is saved under the current map name.];
 docremark [Where you store a map depends on the complexity of what you are creating: if its a single map (maybe with its own .cfg) then the "base" package is the best place. If its multiple maps or a map with new media (textures etc.) its better to store it in its own package (a directory under "packages"), which makes distributing it less messy.];
+docident [mapbackupsonsave] [Determines if map backups (.bak) should be created when a map is saved.];
+docargument [N] [0 off, 1 on] [min 0/max 1/default 1] [0];
 docident [scalelights] [Scales all lights in the map.];
 docargument [S] [size change (percentage)] [] [0];
 docargument [I] [intensity change (percentage)] [] [0];
