@@ -772,6 +772,7 @@ extern int execcontext;
 extern const char *currentserver(int i);
 extern void setcontext(const char *context, const char *info);
 extern void resetcontext();
+extern int millis_();
 
 // server
 extern int modeacronyms;
